tests/NormalTests/paczka1/fuzzy1/60181402.err
Error in line 13: 8H73K S830 -1,2
Error in line 10: 8H73K S830 79,6
Error in line 20: 8H73K S900 8,8
Error in line 24: 8H73K A140 69,0
Error in line 4: S830 S900 38,5
Error in line 35: pGe S900 98,0
